fix resource proxy and monitoring hints
