# src/Hashi.Infrastructure/Persistence/HashiDbContext.cs
@@ -292,6 +292,7 @@ public sealed class HashiDbContext(DbContextOptions<HashiDbContext> options) : D
             entity.Property(x => x.DeletionPolicy).HasMaxLength(32).HasDefaultValue(ResourceDeletionPolicyNames.Optional);
             entity.Property(x => x.SyncState).HasMaxLength(32).HasDefaultValue(ResourceSyncStateNames.Desired);
             entity.Property(x => x.DomainMode).HasMaxLength(32).HasDefaultValue("custom");
+            entity.Property(x => x.MonitoringProtocolHint).HasMaxLength(16);
             entity.Property(x => x.ForwardAuthPolicy).HasMaxLength(32);
             entity.Property(x => x.WafMode).HasMaxLength(32);
             entity.Property(x => x.PathRewriteMode).HasMaxLength(32);
